# Blocksmith

./: .gitignore  LICENSE  README.md  Run-Blocksmith.bat  index.html  package-lock.json  package.json  tsconfig.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  credential_store.rs  db.rs  dto.rs  error.rs  lib.rs  logging.rs  main.rs  minecraft.rs  modpack.rs  modrinth.rs  paths.rs  profile_fs.rs  state.rs
src-tauri/src/commands/: accounts.rs  content.rs  dashboard.rs  launch.rs  mod.rs  profiles.rs  settings.rs  share.rs  skins.rs
src/features/accounts/: AccountsView.tsx
src/features/dashboard/: DashboardView.tsx
src/features/discover/: DiscoverView.tsx
src/features/profiles/: ProfileTable.tsx  ProfileWorkbench.tsx
src/features/shared/: EmptyState.tsx
src/features/skins/: SkinsView.tsx
src/features/updates/: UpdatesView.tsx
src/lib/: format.ts  tauri.ts
src/state/: ui-store.ts
src/types/: api.ts
