[package]
name = "blocksmith"
version = "0.1.0"
description = "Windows-first Minecraft launcher and profile manager"
authors = ["Blocksmith contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "blocksmith_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rand = "0.8"
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tauri = { version = "2", features = [] }
thiserror = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Credentials"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
zstd = "0.13"
